EXOJCR-756: now test works with no permission.  test.policy added