@@ -46,6 +46,11 @@
          <artifactId>exo.kernel.container</artifactId>
       </dependency>
       <dependency>
+         <groupId>org.exoplatform.kernel</groupId>
+         <artifactId>exo.kernel.commons.test</artifactId>
+      </dependency>
+
+      <dependency>
          <groupId>org.slf4j</groupId>
          <artifactId>slf4j-log4j12</artifactId>
       </dependency>
@@ -102,8 +107,92 @@
                <include>**/*.html</include>
                <include>**/*.msg</include>
                <include>**/*.pst</include>
+               <include>**/*.policy</include>
             </includes>
          </testResource>
       </testResources>
+      <plugins>
+         <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+               <!--argLine>-Djava.security.manager=org.exoplatform.commons.test.TestSecurityManager -Djava.security.policy=${project.build.directory}/test-classes/test.policy</argLine-->
+               <systemProperties>
+                  <!--property>
+                     <name>jcr.test.configuration.file</name>
+                     <value>${jcr.test.configuration.file}</value>
+                  </property-->
+                  <property>
+                     <name>emma.coverage.out.file</name>
+                     <value>target/emma/coverage.ec</value>
+                  </property>
+               </systemProperties>
+               <includes>
+                  <include>org/exoplatform/services/document/**/Test*.java</include>
+               </includes>
+               <!--excludes>
+                  <exclude>org/exoplatform/services/document/**/Test*.java</exclude>
+               </excludes-->
+            </configuration>
+         </plugin>
+         <plugin>
+            <artifactId>maven-antrun-plugin</artifactId>
+            <executions>
+               <!--execution>
+                  <id>delete-sources</id>
+                  <phase>process-sources</phase>
+                  <configuration>
+                     <tasks>
+                        <echo>Remove files that have been customized</echo>
+                        <delete>
+                           <fileset dir="${project.build.directory}/generated-sources/javacc/org/exoplatform/services/jcr/impl/core/query">
+                              <include name="sql/ASTLiteral.java" />
+                              <include name="sql/ASTContainsExpression.java" />
+                              <include name="sql/ASTPredicate.java" />
+                              <include name="sql/ASTIdentifier.java" />
+                              <include name="xpath/SimpleNode.java" />
+                           </fileset>
+                        </delete>
+                     </tasks>
+                  </configuration>
+                  <goals>
+                     <goal>run</goal>
+                  </goals>
+               </execution-->
+               <execution>
+                  <id>prepare-test-policy</id>
+                  <phase>process-test-resources</phase>
+                  <configuration>
+                     <tasks>
+                        <echo>Creating Access Policy for tests</echo>
+                        <makeurl file="${settings.localRepository}" property="localRepositoryURL"/>
+                        <makeurl file="${project.build.outputDirectory}" property="outputDirectoryURL"/>
+                        <makeurl file="${project.build.testOutputDirectory}" property="testOutputDirectoryURL"/>
+                        <copy todir="${project.build.testOutputDirectory}" overwrite="true">
+                           <fileset dir="${project.basedir}/src/test/resources/">
+                              <include name="test.policy"/>
+                           </fileset>
+                           <filterset>
+                              <filter token="MAVEN_REPO" value="${localRepositoryURL}"/>
+                              <filter token="MAIN_CLASSES" value="${outputDirectoryURL}"/>
+                              <filter token="TEST_CLASSES" value="${testOutputDirectoryURL}"/>
+                           </filterset>
+                        </copy>
+                     </tasks>                     
+                  </configuration>
+                  <goals>
+                     <goal>run</goal>
+                  </goals>
+               </execution>
+            </executions>
+            <dependencies>
+               <dependency>
+                  <groupId>ant</groupId>
+                  <artifactId>ant-optional</artifactId>
+                  <version>1.5.3-1</version>
+               </dependency>
+            </dependencies>
+         </plugin>
+      </plugins>
    </build>
 </project>
